feat: new user filds
